--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>结构树</title>
-    <link rel="stylesheet/less" type="text/css" href="css/tree.less">
-    <script src="js/less.min.js"></script>
+    <title>原生js实现树结构</title>
+    <link rel="stylesheet/less" type="text/css" href="css/index.less">
+    <script src="js/less.min.v2.5.3.js"></script>
 </head>
 <body>
     <div class="menu">
@@ -80,7 +80,6 @@
             </li>
         </ul>
     </div>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
-    <script src="js/tree.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
